css/style.css
/* ... */
.circle-bg-3 {
	background-image: url(../images/article_roadtrip/road_map_3.gif);
}

.circle-bg-2 {
	background-image: url(../images/article_roadtrip/road_map_2.gif);
}

.circle-bg-1c {
	background-image: url(../images/article_roadtrip/road_map_1c.gif);
}

.circle-bg-1b {
	background-image: url(../images/article_roadtrip/road_map_1b.gif);
}

.circle-bg-1a {
	background-image: url(../images/article_roadtrip/road_map_1a.gif);
}

.circle-bg-1 {
	background-image: url(../images/article_roadtrip/road_map_1.gif);
}

/* Article Eats */

#article-eats .col-md-6 {
	position: relative;
}

#article-eats .animateblock.btm.animated img {
	margin-left: 0%;
}

#article-eats #taco {
	width: 50%;
	margin-top: -65%;
}

#article-eats img {
	width: 75%;
	margin-top: -50%;
	margin-bottom: -100%;
	z-index: -1 !important;	
}

/* Article Surf Skate */

#article-surf-skate {
	padding-bottom: 0;
	margin-bottom: -25px;
}
#article-surf-skate .container-fluid.article {
	width: 100%;
	padding-left: 0px;
	padding-right: 0px;
	margin-left: 0px;
	margin-right: 0px;
	max-width: none;
}

#article-surf-skate .col-md-8 {
	text-align: center;
}

#article-surf-skate .col-md-8.col-md-offset-2 p {
	text-align: center;
	max-width: 900px;
	display: inline-block;
	padding-bottom: 0;
}

#article-surf-skate .box-header {
	display: block;
	padding: 25px;
	margin-bottom: 25px;
}

#article-surf-skate .box-header .best-for {
	font-size: 20px;
	font-weight: 900;
	text-transform: none;
}

#article-surf-skate .scroll-list .col-md-12 {
	position: relative;
}

#article-surf-skate .scroll-list-box p {
	padding: 25px;
}

.surf-skate-title {
	text-align: center;
	position: absolute;
	top: 45px;
	left: 25%;
	transform: translateX(-50%);
	font-size: 20px;
	color: rgba(5,187,255,1);
}

.surf-skate-title-accent {
	text-transform: capitalize;
	font-weight: 700;
}

.surf-skate-container {
	background-attachment: fixed;
  	background-repeat: no-repeat;
  	position: relative;
  	min-height: 100%;
  	padding: 40px;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    box-shadow: inset 0 0 1em #111;
}

.surf-skate-wrap {
	background-attachment: fixed;
    background-repeat: no-repeat;
  	position: relative;
  	min-height: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    box-shadow: inset 0 0 1em #111;
}

.surf-skate-wrap#surf-bg {
	margin-top: 50px;
	background-image: url("../images/surf-skate/surf_1.jpg");
}

.surf-skate-wrap#skate-bg {
	background-image: url("../images/surf-skate/skate_1.jpg");
}

#article-surf-skate .scroll-list-box {
	margin: 10% 0;
	max-width: 850px;
}

#article-surf-skate .scroll-list-box:first-of-type {
	margin-top: 0;
}

#article-surf-skate .surf-skate-wrap .col-md-6.col-md-offset-1 {
	margin-bottom: 0;
	padding: 15% 0;
}

.surf-skate-title {
	top: 15px;
}

/* Animation Styles */

.animateblock {
  opacity: 0;
  -webkit-transition: all 0.45s ease-in-out;
  -moz-transition: all 0.45s ease-in-out;
  transition: all 0.45s ease-in-out;
  position: relative;
  z-index: 50!important;
}
.animateblock.animated {
  opacity: 1;
}
.animateblock img {
	position: relative;
  z-index: 50!important;
}
.animateblock.btm {
  display: block;
  margin-top: 45px;
}
.animateblock.btm.animated {
  margin-top: 0;
}

/* Meet CCA Animation Styles */

.animateblock.btm.sect-break {
	margin-top: -10%;
	-webkit-transition: all 0.45s ease-in-out;
  -moz-transition: all 0.45s ease-in-out;
  transition: all 0.45s ease-in-out;
}

.animateblock.btm.animated.sect-break {
	margin-top: -40%;
}

/* Camp CA Animation Styles */

#camp-ca .animateblock.btm.animated img {
	margin-left: -9%;
}

/* Camp CA/Listicle Styles */

#camp-ca .scroll-list-box {
	box-shadow: none;
	margin: 80px 0 0 0;
	position: relative;
	z-index: 1!important;
}
#camp-ca .scroll-list-box .bold {
	color: #1f1f1f;
}
#camp-ca .scroll-list-box .box-header {
	margin-bottom: 6px;
}
#camp-ca .scroll-list-box .text-wrapper {
	padding: 20px 25px 15px;
	clear: both;
}
#camp-ca .scroll-list-box p {
	padding: 0 20px 14px 0;
	font-size: 19px;
	line-height: 26px;
	font-weight: 300;
}
#camp-ca .scroll-list-box .camp-ca-bold {
	font-weight: 600;
}
#camp-ca .col-md-6 img {
	box-shadow: 2px 4px 12px rgba(0,0,0,.2);
	margin-top: -300px;
	margin-bottom: 40px;
	position: relative;
	z-index: 50!important;
}

/* Slideshow/Accordion Styles */

.hideContentWrap {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	background-color: #05bbff;
	width: 950px;
	margin: 0 auto 1px;
	position: relative;
	text-align: center;
	overflow: hidden;
}
.hideContentWrap .hideContentHeader {
	color: #fff;
	text-transform: uppercase;
	font-weight: 400;
	font-size: 32px;
	letter-spacing: 3px;
	background-color: rgba(5,187,255,.8);
	padding: 25px 25px 22px 25px;
	position:relative;
	z-index: 50!important;
	text-shadow: 0px 2px 4px rgba(0,0,0,.4);
	transition: all .5s ease-in-out;
}
.hideContentWrap .hideContentHeader:hover {
	cursor: pointer;
	letter-spacing: 4px;
	color: #fff845;
}
.hideContentHeader.active {
    background-color: rgba(5,187,255,0);
    text-shadow: 0px 1px 4px rgba(0,0,0,.8);
    color: #fff845;
}
.hideContentHeader.active:hover {
	letter-spacing: 3px;
}
.hideContentWrap .hideContent {
	height: 80vh;
	display: none;
	max-height: 750px;
}
.hideContentWrap .hideContent .text-box {
	background-color:rgba(255,255,255,.9);
	position:absolute;
	z-index:1!important;
	bottom:0;
	margin:0 10px 10px 10px;
}
.hideContentWrap .hideContent h4 {
	/*background-color: rgba(235,4,120,1);*/
	background-color: rgba(36,52,60,.9);
	color: #FFF;
	padding: 8px 40px 4px;
	letter-spacing: 2px;
	font-size: 18px;
	display: inline-block;
}
.hideContentWrap .hideContent .text-box p {
	padding:15px 45px 0px 45px;
	font-size:17px;
	line-height:22px;
	font-weight: 400;
}
/* ... */

